--- a/package.json
+++ b/package.json
@@ -13,13 +13,19 @@
     "@reduxjs/toolkit": "^2.8.2",
     "@tailwindcss/vite": "^4.1.10",
     "axios": "^1.10.0",
+    "country-state-city": "^3.2.1",
+    "date-fns": "^4.1.0",
     "formik": "^2.4.6",
+    "moment": "^2.30.1",
     "react": "^19.1.0",
     "react-apexcharts": "^1.7.0",
+    "react-cookie": "^8.0.1",
+    "react-datetime-picker": "^7.0.1",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.3",
+    "rsuite": "^5.83.3",
     "tailwindcss": "^4.1.10",
     "yup-phone": "^1.3.2"
   },
