--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.3",
+    "reactjs-otp-input": "^2.0.10",
     "rsuite": "^5.83.3",
     "tailwindcss": "^4.1.10",
     "yup-phone": "^1.3.2"
