--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.3",
+    "react-timer-hook": "^4.0.5",
     "reactjs-otp-input": "^2.0.10",
     "rsuite": "^5.83.3",
     "tailwindcss": "^4.1.12",
